# robot-python-xbox-joystick

./: CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml
docs/: conf.py  index.rst
examples/: joystick_example.py  joystick_state_example.py  xbox_controller_example.py  xbox_controller_state_example.py
src/robot/: xbox_controller.py  xbox_joystick.py  xbox_state.py
tests/: test_xbox_controller.py  test_xbox_joystick.py  test_xbox_state.py
